--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "version": "0.0.1",
   "description": "",
   "main": "index.html",
-  "dependencies": {},
+  "window": {
+    "toolbar": true
+  },
+  "dependencies": {
+    "lokijs": "^1.3.19"
+  },
   "devDependencies": {
     "babel-core": "^6.4.0",
     "babel-loader": "^6.2.1",
